Little change in adding new TimeSheetActivity and made better forms for adding new entities on frontend

--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -12,11 +12,15 @@
 }
 
 .popup-inner {
+  justify-content: center;
+  align-items: center;
   position: relative;
   padding: 32px;
   width: 100%;
-  max-width: 640px;
+  max-width: 400px;
   background-color: #fff;
+  display:flex;
+  flex-direction: column;
 }
 
 .popup-inner .close-btn {
